# figgie_gym

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  launch_mlflow.sh  pyproject.toml
docs/: 1_intro_to_game_and_env.md  2_combinatorics_and_bonus_amortization.md  3_models_beyond_combinatorics.md  4_reinforcement_learning_ppo.md  5_multiagent_ppo.md
notebook/: card_counter.ipynb  eqvaraint.ipynb  example_inference_on_model.py  info_leakage_through_price.ipynb  info_leakage_through_price_new_format.ipynb  network design.ipynb  simulation.ipynb  supervised agent performance.ipynb  test_type_checking.py
scripts/: benchmark_observations_to_tensordict.py  collect_supervised_training_data_multiple.py  commands.txt  train.py  train_mappo.py  train_ppo.py
src/figgie_gym/: utilities.py
src/figgie_gym/agent/: cardcounter.py  (+4 more)
tests/: conftest.py  mocks.py  test_env.py  test_gae.py  test_utilities.py  test_vectorized_game_runner.py
tests/agent/: test_cardcounter.py  test_noise_agent.py  test_supervised_agent.py  test_supervised_basic.py  test_supervised_batching.py  test_supervised_loading.py  test_supervised_model_agent.py
tests/envs/: test_multiple_game.py
tests/market/: test_client.py  test_common.py  test_market.py  test_order_book.py  test_order_queue.py  test_quantity_fills.py  test_spotter.py  test_validate.py
tests/models/: test_building_blocks.py  test_equivariant.py  test_fc_tensordict_classifier.py  test_mappo_critic.py  test_mappo_gae.py  test_ppo_lognormal.py
tests/pipelines/: test_observations_to_tensordict.py  test_tendordict_preprocess.py  test_tensordict_dataloader.py  test_tensordict_flatten_features.py
(+40 files in other folders)
