[project]
name = "figgie-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sortedcontainers>=2.4.0",
    "pettingzoo>=1.25.0",
    "scipy>=1.17.0",
    "jinja2>=3.1.6",
    "structlog>=25.5.0",
    "joblib>=1.5.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "torch>=2.9.1",
    "lightning>=2.6.0",
    "tensordict>=0.10.0",
    "tyro>=1.0.5",
    "plotly[express]>=6.5.2",
    "nbformat>=4.2.0",
    "jaxtyping>=0.3.5",
    "beartype>=0.22.9",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "tabulate>=0.9.0",
    "sortedcontainers-stubs>=2.4.3",
    "scipy-stubs>=1.17.0.0",
    "tqdm>=4.67.1",
    "joblib-stubs>=1.5.3.0.20251223",
    "polars>=1.36.1",
    "mlflow>=3.8.1",
    "pyarrow-stubs>=20.0.0.20251215",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 80
exclude = ["**/*.ipynb"]

[tool.ruff.lint]
extend-select = [
    "B",  # Bugbear rules
    "UP", # pyupgrade rules
    "I",  # isort rules (for import organization)
]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D107", "E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in a single file
"tests/*" = ["PLR2004", "S101"]

[tool.coverage.run]
omit = [
    "tests/*",
    "scripts/*",
    "**/zzz/*"
]

[tool.pyright]
include = ["src", "tests"]
ignore = ["**/*.ipynb"]
typeCheckingMode = "strict"
